Assets &  #PRELOADER Section DONE

--- a/index.html
+++ b/index.html
@@ -5,11 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadoo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
+    <!-- 
+        - #PRELOADER
+     -->
+    <div class="preloader" data-preloader>
+        <div class="preloader-inner">
+            <img src="./assets/images/favicon.svg" width="50" height="50" alt="" class="img">
+        </div>
+    </div>
 
+    <!-- 
+        - #HEADER
+     -->
+    <header class="header" data-header>
+        <div class="contaiiner">
+            <a href="#" class="logo">
+                <img src="./assets/images/logo.png" width="180" height="38" alt="">
+            </a>
+
+            <nav class="navber" data-navbar>
+
+            </nav>
+        </div>
+    </header>
+
+    <!-- 
+        - custom js link
+     -->
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
