--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <!-- 
+        - preload images
+     -->
+    <link rel="preload" as="image" href="./assets/images/hero-banner.png">
+    <link rel="preload" as="image" href="./assets/images/preloader.svg">
 </head>
 
 <body>
@@ -27,14 +32,14 @@
         <div class="container">
 
             <a href="#" class="logo">
-                <img src="./assets/images/logo.png" width="187" height="38" alt="">
+                <img src="./assets/images/logo1.svg" width="187" height="38" alt="">
             </a>
 
             <nav class="navbar" data-navbar>
 
                 <div class="navbar-top">
                     <a href="#" class="logo">
-                        <img src="./assets/images/logo.png" width="187" height="38" alt="">
+                        <img src="./assets/images/logo1.svg" width="187" height="38" alt="">
                     </a>
 
                     <button class="nav-toggle-btn" aria-label="close menu" data-nav-toggler>
@@ -74,6 +79,325 @@
             <div class="overlay" data-overlay data-nav-toggler></div>
         </div>
     </header>
+
+    <main>
+        <article>
+            <!-- 
+        - #HERO
+    -->
+            <section class="section hero has-bg-image" style="background-image: url('./assets/images/hero-bg.jpg');">
+                <div class="container">
+
+                    <div class="hero-content">
+
+                        <p class="hero-subtitles">Explore the World <img src="./assets/images/title-icon.svg" width="20"
+                                height="20" alt="world icon" class="img"></p>
+                        <h1 class="h1 title hero-title">
+                            It’s a Big World Out There, Go Explore
+                        </h1>
+                        <p class="hero-text">
+                            We always make our customer happy by providing
+                            as many choices as possible
+                        </p>
+
+                        <div class="wrapper">
+                            <a href="#" class="btn btn-secondary">
+                                <span class="span">Plan a Trip</span>
+
+                                <i class="ri-arrow-right-s-line" aria-hidden="true"></i>
+                            </a>
+
+                            <button class="hero-btn">
+
+                                <div class="btn-img">
+                                    <img src="./assets/images/hero-button-img.jpg" width="100" height="100"
+                                        alt="our story" class="img-cover" />
+
+
+                                    <i class="ri-play-fill" aria-hidden="true"></i>
+                                </div>
+                                <p class="text">Watch our Story</p>
+                            </button>
+                        </div>
+                    </div>
+
+                    <figure class="hero-banner">
+                        <img src="./assets/images/hero-banner.png" width="631" height="735" alt="hero banner"
+                            class="w-100">
+                    </figure>
+                </div>
+            </section>
+        </article>
+    </main>
+
+    <!-- 
+        - #SERVICE
+     -->
+    <section class="section service">
+        <div class="container">
+
+            <div class="title-wrapper">
+                <p class="section-subtitle">
+                    What We Serve
+                </p>
+
+                <h2 class="h2 title section-title">
+                    Top Values For You
+                </h2>
+
+                <p class="section-text">
+                    Try a variety of benefits when
+                    using our services.
+                </p>
+            </div>
+
+            <div class="service-card">
+                <div class="card-icon">
+                    <img src="./assets/images/service-icon-1.svg" width="60" height="60" loading="lazy" alt="icon">
+                </div>
+
+                <h3 class="h3 title card-title">Lot Of Choices</h3>
+
+                <p class="card-text">
+                    Total 460+ destinations that we work with.
+                </p>
+            </div>
+            <div class="service-card">
+                <div class="card-icon">
+                    <img src="./assets/images/service-icon-2.svg" width="60" height="60" loading="lazy" alt="icon">
+                </div>
+
+                <h3 class="h3 title card-title">Best Tour Guide</h3>
+
+                <p class="card-text">
+                    Our tour guide with 15+ years of experience.
+                </p>
+            </div>
+            <div class="service-card">
+                <div class="card-icon">
+                    <img src="./assets/images/service-icon-3.svg" width="60" height="60" loading="lazy" alt="icon">
+                </div>
+
+                <h3 class="h3 title card-title">Easy Booking</h3>
+
+                <p class="card-text">
+                    With an easy and fast ticket purchase process.
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- 
+        - #DESTINATION
+     -->
+    <section class="section desti" aria-label="destination">
+        <div class="container">
+            <p class="section-subtitle">Top destination</p>
+            <h2 class="h2 title section-title">Explore Top Destination</h2>
+
+            <ul class="desti-list">
+
+                <li>
+                    <div class="desti-card">
+
+                        <div class="card-banner img-holder" style="--width: 600; --height: 600;">
+                            <img src="./assets/images/destination-1.jpg" width="600" height="650" loading="lazy"
+                                alt="Enjoy the Beauty of the del" class="img-cover">
+
+                            <span class="card-price">
+                                $340
+                            </span>
+                        </div>
+
+                        <div class="card-content">
+                            <h3 class="h3 title">
+                                <a href="#" class="card-title">Enjoy the Beauty of the del Pincio
+                                </a>
+                            </h3>
+
+                            <address class="card-text">Rome, Italy</address>
+
+                            <div class="card-rating">
+                                <span class="span">
+                                    <i class="ri-star-fill"></i>
+
+                                    4.7
+                                </span>
+
+                                <p class="rating-text">(11.1k Review)</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="desti-card">
+
+                        <div class="card-banner img-holder" style="--width: 600; --height: 600;">
+                            <img src="./assets/images/destination-2.jpg" width="600" height="650" loading="lazy"
+                                alt="Enjoy the Beauty of the del" class="img-cover">
+
+                            <span class="card-price">
+                                $340
+                            </span>
+                        </div>
+
+                        <div class="card-content">
+                            <h3 class="h3 title">
+                                <a href="#" class="card-title">Enjoy the Beauty of the del Pincio
+                                </a>
+                            </h3>
+
+                            <address class="card-text">Rome, Italy</address>
+
+                            <div class="card-rating">
+                                <span class="span">
+                                    <i class="ri-star-fill"></i>
+
+                                    4.7
+                                </span>
+
+                                <p class="rating-text">(11.1k Review)</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="desti-card">
+
+                        <div class="card-banner img-holder" style="--width: 600; --height: 600;">
+                            <img src="./assets/images/destination-3.jpg" width="600" height="650" loading="lazy"
+                                alt="Enjoy the Beauty of the del" class="img-cover">
+
+                            <span class="card-price">
+                                $340
+                            </span>
+                        </div>
+
+                        <div class="card-content">
+                            <h3 class="h3 title">
+                                <a href="#" class="card-title">Enjoy the Beauty of the del Pincio
+                                </a>
+                            </h3>
+
+                            <address class="card-text">Rome, Italy</address>
+
+                            <div class="card-rating">
+                                <span class="span">
+                                    <i class="ri-star-fill"></i>
+
+                                    4.7
+                                </span>
+
+                                <p class="rating-text">(11.1k Review)</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="desti-card">
+
+                        <div class="card-banner img-holder" style="--width: 600; --height: 600;">
+                            <img src="./assets/images/destination-4.jpg" width="600" height="650" loading="lazy"
+                                alt="Enjoy the Beauty of the del" class="img-cover">
+
+                            <span class="card-price">
+                                $340
+                            </span>
+                        </div>
+
+                        <div class="card-content">
+                            <h3 class="h3 title">
+                                <a href="#" class="card-title">Enjoy the Beauty of the del Pincio
+                                </a>
+                            </h3>
+
+                            <address class="card-text">Rome, Italy</address>
+
+                            <div class="card-rating">
+                                <span class="span">
+                                    <i class="ri-star-fill"></i>
+
+                                    4.7
+                                </span>
+
+                                <p class="rating-text">(11.1k Review)</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="desti-card">
+
+                        <div class="card-banner img-holder" style="--width: 600; --height: 600;">
+                            <img src="./assets/images/destination-5.jpg" width="600" height="650" loading="lazy"
+                                alt="Enjoy the Beauty of the del" class="img-cover">
+
+                            <span class="card-price">
+                                $340
+                            </span>
+                        </div>
+
+                        <div class="card-content">
+                            <h3 class="h3 title">
+                                <a href="#" class="card-title">Enjoy the Beauty of the del Pincio
+                                </a>
+                            </h3>
+
+                            <address class="card-text">Rome, Italy</address>
+
+                            <div class="card-rating">
+                                <span class="span">
+                                    <i class="ri-star-fill"></i>
+
+                                    4.7
+                                </span>
+
+                                <p class="rating-text">(11.1k Review)</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="desti-card">
+
+                        <div class="card-banner img-holder" style="--width: 600; --height: 600;">
+                            <img src="./assets/images/destination-6.jpg" width="600" height="650" loading="lazy"
+                                alt="Enjoy the Beauty of the del" class="img-cover">
+
+                            <span class="card-price">
+                                $340
+                            </span>
+                        </div>
+
+                        <div class="card-content">
+                            <h3 class="h3 title">
+                                <a href="#" class="card-title">Enjoy the Beauty of the del Pincio
+                                </a>
+                            </h3>
+
+                            <address class="card-text">Rome, Italy</address>
+
+                            <div class="card-rating">
+                                <span class="span">
+                                    <i class="ri-star-fill"></i>
+
+                                    4.7
+                                </span>
+
+                                <p class="rating-text">(11.1k Review)</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+
+            <a href="View All Destination" class="btn btn-primary">View All Destination</a>
+        </div>
+    </section>
 
     <!-- 
         - custom js link
