GALLERY Section is done

--- a/index.html
+++ b/index.html
@@ -458,6 +458,71 @@
             </figure>
         </div>
     </section>
+
+    <!-- 
+        - #GALLERY
+     -->
+
+    <section class="section gallery" aria-label="gallery">
+        <div class="container">
+
+            <p class="section-subtitle">
+                Photo Gallery
+            </p>
+
+            <h2 class="h2 title section-title">
+                Photo’s From Travelers
+            </h2>
+
+            <ul class="gallery-list">
+
+                <li class="gallery-item">
+
+                    <figure class="item-banner img-holder" style="--width: 700; --height: 925;">
+                        <img src="./assets/images/gallery-1.jpg" height="925" width="700" loading="lazy" alt="gallery"
+                            class="img-cover">
+                    </figure>
+                </li>
+                <li class="gallery-item">
+
+                    <figure class="item-banner img-holder" style="--width: 700; --height: 925;">
+                        <img src="./assets/images/gallery-2.jpg" height="925" width="700" loading="lazy" alt="gallery"
+                            class="img-cover">
+                    </figure>
+                </li>
+                <li class="gallery-item">
+
+                    <figure class="item-banner img-holder" style="--width: 700; --height: 925;">
+                        <img src="./assets/images/gallery-3.jpg" height="925" width="700" loading="lazy" alt="gallery"
+                            class="img-cover">
+                    </figure>
+                </li>
+                <li class="gallery-item">
+
+                    <figure class="item-banner img-holder" style="--width: 700; --height: 925;">
+                        <img src="./assets/images/gallery-4.jpg" height="925" width="700" loading="lazy" alt="gallery"
+                            class="img-cover">
+                    </figure>
+                </li>
+                <li class="gallery-item">
+
+                    <figure class="item-banner img-holder" style="--width: 700; --height: 925;">
+                        <img src="./assets/images/gallery-5.jpg" height="925" width="700" loading="lazy" alt="gallery"
+                            class="img-cover">
+                    </figure>
+                </li>
+                <li class="gallery-item">
+
+                    <figure class="item-banner img-holder" style="--width: 700; --height: 925;">
+                        <img src="./assets/images/gallery-6.jpg" height="925" width="700" loading="lazy" alt="gallery"
+                            class="img-cover">
+                    </figure>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+
     <!-- 
         - custom js link
      -->
