CTA Section  is Done

--- a/index.html
+++ b/index.html
@@ -522,6 +522,25 @@
         </div>
     </section>
 
+    <!-- 
+        - #CTA
+     -->
+
+    <section class="section cta" aria-label="call to action">
+        <div class="container">
+
+            <div class="cta-card has-bg-image" style="background-image: url(' ./assets/images/cta-bg.jpg');">
+                <h2 class="h2 title section-title">Prepare Yourself & Let’s Explore The Beauty Of The World
+
+                    <img src="./assets/images/title-icon.svg" width="36" height="36" alt="" class="img">
+                </h2>
+
+                <p class="section-text">We have many special offers especially for you.</p>
+
+                <a href="#" class="btn btn-primary">Get Started</a>
+            </div>
+        </div>
+    </section>
 
     <!-- 
         - custom js link
